Fixed chat clipping

--- a/code/ui/HUD.scss
+++ b/code/ui/HUD.scss
@@ -253,7 +253,7 @@ chatentry {
     flex-shrink: 0;
     flex-grow: 0;
     padding: 3px 20px 3px 20px;
-    max-width: 100%;
+    max-width: 88%;
 
     .name {
         padding-right: 10px;
